<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.inventory.AddInventoryFragment">

        <EditText
            android:id="@+id/editTextDateOfPurchase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="Date of Purchase or Acquisition"
            android:inputType="date" />

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="Item Description"
            android:inputType="textMultiLine" />

        <EditText
            android:id="@+id/editTextMake"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="Item Make"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextModel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="Item Model"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextSerialNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="Item Serial Number (Optional)"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextEstimatedValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="Estimated Value"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/editTextComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="Comment"
            android:inputType="textMultiLine" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Photos"
            android:textSize="18sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="143dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:src="@android:drawable/ic_menu_add" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:src="@android:drawable/ic_menu_add" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:src="@android:drawable/ic_menu_add" />
        </LinearLayout>

    </ScrollView>
    <Button
    android:id="@+id/button_ok"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="OK" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Cancel" />

    </LinearLayout>
